docs: add setup tasks for VSCode-Huckleberry workspace

--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "@vscode-huckleberry/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "preinstall": "npx only-allow pnpm"
+  },
   "private": true,
   "dependencies": {
     "empty": "0.10.1"
