--- a/nx.json
+++ b/nx.json
@@ -12,6 +12,30 @@
     ],
     "sharedGlobals": []
   },
+  "targetDefaults": {
+    "build": {
+      "dependsOn": ["^build"],
+      "inputs": ["production", "^production"],
+      "cache": true
+    },
+    "test": {
+      "inputs": ["default", "^production", "{workspaceRoot}/vitest.workspace.ts"],
+      "cache": true
+    },
+    "lint": {
+      "inputs": ["default", "{workspaceRoot}/eslint.config.mjs"],
+      "cache": true
+    },
+    "package": {
+      "dependsOn": ["build", "lint"],
+      "cache": true
+    },
+    "e2e": {
+      "inputs": ["default", "^production"],
+      "cache": true
+    }
+  },
+  "cacheableOperations": ["build", "lint", "test", "package"],
   "nxCloudId": "67ff4f8c7962132f8b952f10",
   "plugins": [
     {
