--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@types/node": "^20.0.0",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
+    "@typescript-eslint/eslint-plugin": "^8.30.1",
+    "@typescript-eslint/parser": "^8.30.1",
     "@vitejs/plugin-react": "^4.2.0",
     "@vitest/coverage-v8": "^3.0.5",
     "@vitest/ui": "^3.0.0",
