refactor: rename "Task Master" to "Task Manager" across the extension
- Updated display names, descriptions, and help texts in package.json.
- Refactored extension.ts to replace all instances of "Task Master" with "Task Manager".
- Modified BaseTool.ts to reflect the new naming convention in error and info messages.
- Adjusted type definitions in types.ts to align with the new name.
- Revised implementation guide and task documentation to use "Task Manager".
- Updated task-related commands and usage instructions in task-master.md and tasks.md.

--- a/apps/huckleberry-extension/package.json
+++ b/apps/huckleberry-extension/package.json
@@ -1,6 +1,6 @@
 {
   "name": "huckleberry-extension",
-  "displayName": "Huckleberry Task Master",
+  "displayName": "Huckleberry Task Manager",
   "version": "0.1.0",
   "description": "A VS Code extension that helps manage and track tasks using LLM capabilities",
   "publisher": "vscode-huckleberry",
@@ -31,7 +31,7 @@
     "chatParticipants": [
       {
         "id": "huckleberry-extension.taskmaster",
-        "name": "Task Master",
+        "name": "Task Manager",
         "description": "An assistant that helps manage tasks and project requirements",
         "isSticky": false,
         "commands": [
@@ -49,12 +49,12 @@
           "txt"
         ],
         "followupSupportLevel": "always",
-        "helpTextTitle": "Huckleberry Task Master",
+        "helpTextTitle": "Huckleberry Task Manager",
         "helpText": "I can help you manage your tasks and project requirements. Try asking me to:\n- List all tasks\n- Create a new task\n- Update task status\n- Find tasks by priority"
       }
     ],
     "configuration": {
-      "title": "Huckleberry Task Master",
+      "title": "Huckleberry Task Manager",
       "properties": {
         "huckleberry.taskMaster.defaultTasksLocation": {
           "type": "string",
