chore: update dependencies and adjust TypeScript paths
- Added Docusaurus dependencies to package.json for version 3.7.0.
- Updated the @types/react dependency to use a caret (^) for versioning.
- Rearranged TypeScript path mappings in tsconfig.base.json for better organization.

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -21,9 +21,8 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "paths": {
-      "@huckleberry/shared/*": ["shared/*"],
-      "@huckleberry/demo-site/*": ["demo-site/src/*"],
-      "@huckleberry/extension/*": ["apps/huckleberry-extension/src/*"]
+      "@huckleberry/extension/*": ["apps/huckleberry-extension/src/*"],
+      "@huckleberry/shared/*": ["shared/*"]
     }
   },
   "exclude": ["node_modules", "tmp"]
