refactor: enhance file handling tools with debug logging and improved error handling

--- a/apps/huckleberry-docs/project.json
+++ b/apps/huckleberry-docs/project.json
@@ -13,7 +13,7 @@
     },
     "build": {
       "executor": "nx:run-commands",
-      "outputs": ["apps/huckleberry-docs/build"],
+      "outputs": ["{projectRoot}/build"],
       "options": {
         "command": "docusaurus build",
         "cwd": "apps/huckleberry-docs"
