--- a/nx.json
+++ b/nx.json
@@ -19,7 +19,11 @@
       "cache": true
     },
     "test": {
-      "inputs": ["default", "^production", "{workspaceRoot}/vitest.workspace.ts"],
+      "inputs": [
+        "default",
+        "^production",
+        "{workspaceRoot}/vitest.workspace.ts"
+      ],
       "cache": true
     },
     "lint": {
