feat: Implement task management features including creation, querying, and status updates
- Added createTaskHandler for creating new tasks from user prompts.
- Introduced initHandler for initializing task tracking and creating necessary files.
- Implemented queryHandler for listing and filtering tasks by priority.
- Developed statusHandler for marking tasks as complete and changing their priority.
- Created taskUtils for common task-related operations such as reading and writing tasks.json.
- Added todoScanHandler to scan codebase for TODO comments and create tasks from them.
- Updated types to include source information for tasks created from code.
- Implemented copilotHelper to detect GitHub Copilot mode and recommend agent mode.

--- a/apps/huckleberry-extension/package.json
+++ b/apps/huckleberry-extension/package.json
@@ -27,10 +27,18 @@
   "contributes": {
     "commands": [
       {
+        "command": "huckleberry-extension.helloWorld",
+        "title": "Huckleberry: Hello World"
+      },
+      {
         "command": "huckleberry-extension.manageTasks",
         "title": "Huckleberry: Manage Tasks",
         "category": "Huckleberry",
         "description": "Open the Huckleberry task management interface"
+      },
+      {
+        "command": "huckleberry-extension.checkCopilotAgentMode",
+        "title": "Huckleberry: Check Copilot Agent Mode"
       }
     ],
     "chatParticipants": [
