--- a/apps/huckleberry-extension/tsconfig.json
+++ b/apps/huckleberry-extension/tsconfig.json
@@ -8,7 +8,8 @@
     "lib": ["ES2022"],
     "sourceMap": true,
     "strict": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "importHelpers": false
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist"]
