chore: update pre-commit script and VSCode settings for improved setup

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "github.copilot.chat.commitMessageGeneration.useInstructionFiles": true,
   "github.copilot.chat.commitMessageGeneration.instructions": [
+    
     {
       "text": "Always follow the conventional commits specification exactly."
     },
@@ -19,5 +20,7 @@
     {
       "text": "Indicate breaking changes with ! after the type/scope or by including BREAKING CHANGE: in the footer."
     }
-  ]
+],
+"github.copilot.chat.codesearch.enabled": true,
+"github.copilot.chat.agent.thinkingTool": true
 }
