--- a/apps/huckleberry-docs/blog/authors.yml
+++ b/apps/huckleberry-docs/blog/authors.yml
@@ -1,23 +1,9 @@
-yangshun:
-  name: Yangshun Tay
-  title: Front End Engineer @ Facebook
-  url: https://github.com/yangshun
-  image_url: https://github.com/yangshun.png
+tim:
+  name: Tim Morris
+  title: Huckleberry Creator
+  url: https://www.linkedin.com/in/timdmorris/
+  image_url: https://avatars.githubusercontent.com/u/8735906?v=4
   page: true
   socials:
-    x: yangshunz
-    github: yangshun
-
-slorber:
-  name: Sébastien Lorber
-  title: Docusaurus maintainer
-  url: https://sebastienlorber.com
-  image_url: https://github.com/slorber.png
-  page:
-    # customize the url of the author page at /blog/authors/<permalink>
-    permalink: '/all-sebastien-lorber-articles'
-  socials:
-    x: sebastienlorber
-    linkedin: sebastienlorber
-    github: slorber
-    newsletter: https://thisweekinreact.com
+    linkedin: timdmorris
+    github: timmorris
