feat(docs): add link to official documentation site in README.md feat(ci): set GITHUB_ACTIONS environment variable for deployment fix(docusaurus): update baseUrl for GitHub Pages deployment

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -56,6 +56,8 @@ jobs:
         
       - name: Build Docusaurus site
         run: pnpm exec nx build huckleberry-docs
+        env:
+          GITHUB_ACTIONS: 'true'
         
       - name: Setup Pages
         uses: actions/configure-pages@v5
