--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,8 +39,8 @@ jobs:
 
       - name: Configure Git
         run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "Monorail Updater"
+          git config --global user.email "monorail-updater@users.noreply.github.com"
 
       - name: Install pnpm
         uses: pnpm/action-setup@v3
